# ntr-cpp

./: .gitignore  .travis.yml  01_download_boost.sh  02_build_boost.sh  03_download_thrift.sh  04_build_thrift.sh  05_download_botan.sh  06_build_botan.sh  07_download_sqlite.sh  08_build_sqlite.sh  09_download_odb.sh  10_build_odb.sh  README.md  _shared.sh  build.sh  circle.yml  clean.sh  dependencies.sh
src/boost/: CMakeLists.txt
src/botan/: CMakeLists.txt
src/odb/: CMakeLists.txt
src/sqlite/: CMakeLists.txt
src/thrift/: CMakeLists.txt  config.h
