cmake_minimum_required(VERSION 2.6.3)
project(android-boost)

set(sqlite_root ${CMAKE_CURRENT_SOURCE_DIR}/../src/sqlite CACHE PATH "Sqlite repo")

set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -g -fPIC" )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -DSQLITE_HAS_CODEC")

#if(NOT DEFINED ANDROID_ABI)
#    link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../out-libs/local") 
#else()
#    link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../out-libs/android-${ANDROID_ABI}") 
#endif()

file(GLOB_RECURSE sqlite_srcs "${sqlite_root}/*.c" "${sqlite_root}/codec.cpp")
add_library(sqlite3 STATIC ${sqlite_srcs})

message("${DIST_DIRECTORY}/inc")
if(NOT "${IOS_PLATFORM}" STREQUAL "")
    set(thread_lib "boost_thread")
elseif(NOT "${ANDROID_ABI}" STREQUAL "")
    include_directories("${ANDROID_NDK}/sources/cxx-stl/gnu-libstdc++/4.8/include")
    include_directories("${ANDROID_NDK}/platforms/android-${ANDROID_NDK_API_LEVEL}/arch-arm/usr/include/")
    include_directories("${ANDROID_NDK}/toolchains/x86-4.8/prebuilt/darwin-x86/lib/gcc/i686-linux-android/4.8/include/")
    set(thread_lib "boost_thread")
else()
    set(thread_lib "pthread")
endif()
#include_directories("${DIST_DIRECTORY}/inc")

#if ("${CMAKE_TOOLCHAIN_FILE}" STREQUAL "")
#    message("Builing local lib")
#    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../out-include/local/")
#    set(thread_lib "pthread")
#else()
#    message("Cross compiling")
#    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../out-include/android-${ANDROID_ABI}/")
#    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../../android-ndk-r9b/sources/cxx-stl/gnu-libstdc++/4.8/include")
#    include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../../android-ndk-r9b/platforms/android-9/arch-arm/usr/include/")
#    set(thread_lib "boost_thread")
#endif()
#include_directories(${sqlite_root} ${CMAKE_CURRENT_SOURCE_DIR})
#target_link_libraries(sqlite3 ${thread_lib} botan dl rt) 
#
#if ("${CMAKE_TOOLCHAIN_FILE}" STREQUAL "")
#    file(GLOB_RECURSE sqlite_test_srcs "${sqlite_root}/test_*.cpp")
#    add_executable(sqlite_test ${sqlite_test_srcs})
#    target_link_libraries(sqlite_test sqlite3 botan dl rt) 
#    message("${CMAKE_CURRENT_SOURCE_DIR}/../../out-libs/local")
#    link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../out-libs/local") 
#endif()
